--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keyword" content="Тестовое задание">
-    <meta name="description" content="Макет тестового задания">
-    <title>Тестовое задание</title>
+    <meta name="keyword" content="Shop">
+    <meta name="description" content="Sell star ships">
+    <title>StarShipsShop</title>
     <link rel="icon" href="favicon.ico" type="image/ico">
     <link rel="preload" href="./fonts/Questrial-Regular.woff2" as="font" crossorigin="anonymous">
   </head>
