Create cart, card and styled it. Some improvements

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keyword" content="Shop">
     <meta name="description" content="Sell star ships">
+    <base href="/"/>
     <title>StarShipsShop</title>
     <link rel="icon" href="favicon.ico" type="image/ico">
     <link rel="preload" href="./fonts/Questrial-Regular.woff2" as="font" crossorigin="anonymous">
